Переработан ManagePageTest: тест приведён к POM, удалён дублирующий тест, названия сокращены